[JENKINS-52825] - Add blueocean-executor-info-plugin to the blueocean meta package as a dependancy (#1925)
* [JENKINS-52825] - Add blueocean-executor-info-plugin to the blueocean meta package as a dependancy

* rename blueocean-executor-info-plugin to blueocean-executor-info to match the plugin name so it matches up right

--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>blueocean-jira</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blueocean-executor-info</artifactId>
+        </dependency>
+
         <!-- Bundled plugins for improved out of the box experience -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
