--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -49,6 +49,7 @@
     "jest": "19.0.2",
     "jest-cli": "19.0.2",
     "mocha": "3.1.0",
+    "prop-types": "15.7.2",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
     "skin-deep": "0.16.0",
