--- a/blueocean-material-icons/package.json
+++ b/blueocean-material-icons/package.json
@@ -18,12 +18,14 @@
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-addons-test-utils": "15.4.2",
-    "mocha": "4.0.1",
     "chai": "4.1.2",
     "enzyme": "2.5.1",
+    "mocha": "4.0.1",
+    "prop-types": "15.7.2",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
     "sinon": "4.1.2"
-  }
+  },
+  "dependencies": {}
 }
