--- a/jenkins-design-language/.babelrc
+++ b/jenkins-design-language/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+        "@babel/env",
+        "@babel/react",
+        "@babel/preset-flow",
+        "@babel/preset-typescript"
+    ],
+    "plugins": ["@babel/plugin-proposal-class-properties"]
 }
