--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -5,8 +5,8 @@
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
-    "storybook": "npm run gulp build && start-storybook -p 9001 --static-dir dist/assets/",
-    "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "flow": "flow",
     "lint": "gulp lint",
     "gulp": "gulp build",
@@ -46,8 +46,8 @@
   },
   "dependencies": {
     "@jenkins-cd/blueocean-material-icons": "0.0.8",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
+    "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
     "moment": "2.19.3",
@@ -58,17 +58,42 @@
     "react-router": "2.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@jenkins-cd/js-builder": "0.0.64",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@kadira/storybook": "2.35.3",
-    "@types/node": "11.9.5",
+    "@storybook/addon-actions": "^5.0.5",
+    "@storybook/addon-links": "^5.0.5",
+    "@storybook/addons": "^5.0.5",
+    "@storybook/react": "^5.0.5",
+    "@types/node": "^11.11.7",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
-    "babel-eslint": "7.0.0",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.5",
     "bluebird": "3.4.6",
     "browserify": "16.2.3",
     "chai": "3.5.0",
@@ -78,28 +103,34 @@
     "eslint-plugin-react": "4.3.0",
     "flow-bin": "0.33.0",
     "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "0.3.2",
     "gulp-concat": "2.6.0",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "3.0.1",
+    "gulp-jest": "^4.0.2",
     "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "2.1.1",
     "gulp-svgmin": "1.2.3",
-    "gulp-typescript": "4.0.1",
+    "gulp-typescript": "^4.0.1",
     "harp": "0.29.0",
-    "jest": "19.0.2",
+    "jest": "^19.0.2",
+    "jest-cli": "^23.5.0",
+    "jest-junit": "^5.2.0",
     "less": "2.7.2",
+    "less-loader": "^4.1.0",
     "mockdate": "2.0.2",
     "node-sass": "4.11.0",
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
     "react-addons-test-utils": "15.4.2",
+    "react-docgen-typescript-loader": "^3.0.1",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "run-sequence": "1.2.2",
-    "ts-jest": "19.0.2",
+    "ts-jest": "^19.0.2",
     "tsify": "4.0.0",
-    "typescript": "3.3.3333",
+    "typescript": "^3.0.3",
     "watchify": "3.11.1"
   },
   "jenkinscd": {
