--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -5,8 +5,8 @@
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "npm run gulp build && start-storybook -p 9001 --static-dir dist/assets/",
+    "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
     "flow": "flow",
     "lint": "gulp lint",
     "gulp": "gulp build",
