ignore internal prs

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,7 @@
 name-template: v$NEXT_PATCH_VERSION 🌈
 tag-template: blueocean-parent-$NEXT_PATCH_VERSION
+exclude-lables:
+  - internal
 categories:
   - title: 🚀 Features
     label: enhancement
