--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,9 +1,9 @@
-name-template: v$NEXT_PATCH_VERSION 🌈
+name-template: BlueOcean $NEXT_PATCH_VERSION
 tag-template: blueocean-parent-$NEXT_PATCH_VERSION
 
 replacers:
   - search: '/JENKINS-(\d+)/g'
-    replace: '[https://issues.jenkins-ci.org/browse/JENKINS-$1](JENKINS-$1)'
+    replace: '[JENKINS-$1](https://issues.jenkins-ci.org/browse/JENKINS-$1)'
 exclude-lables:
   - internal
 categories:
