--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,17 +1,6 @@
+# from  https://github.com/jenkinsci/.github/blob/master/.github/release-drafter.yml
+_extends: .github
 name-template: BlueOcean $NEXT_PATCH_VERSION
 tag-template: blueocean-parent-$NEXT_PATCH_VERSION
-
-replacers:
-  - search: '/JENKINS-(\d+)/g'
-    replace: '[JENKINS-$1](https://issues.jenkins-ci.org/browse/JENKINS-$1)'
-exclude-lables:
-  - internal
-categories:
-  - title: 🚀 Features
-    label: enhancement
-  - title: 🐛 Bug Fixes
-    label: bug
-template: |
-  ## What’s Changed
-
-  $CHANGES
+exclude-labels:
+  - skip-changelog
