Project URL updated to use Github instead of Wiki

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <tag>${scmTag}</tag>
   </scm>
 
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/Blue+Ocean+Plugin</url>
+  <url>https://github.com/jenkinsci/blueocean-plugin</url>
 
   <developers>
      <developer>
