--- a/blueocean-events/pom.xml
+++ b/blueocean-events/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>blueocean-events</artifactId>
     <packaging>hpi</packaging>
 
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Blue+Ocean+Plugin</url>
+    <url>https://github.com/jenkinsci/blueocean-plugin/blob/master/blueocean/doc/BlueOcean.adoc</url>
 
     <properties>
         <jacoco.haltOnFailure>true</jacoco.haltOnFailure>
