--- a/blueocean-github-pipeline/pom.xml
+++ b/blueocean-github-pipeline/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>blueocean-github-pipeline</artifactId>
   <packaging>hpi</packaging>
 
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/Blue+Ocean+Plugin</url>
+  <url>https://github.com/jenkinsci/blueocean-plugin/blob/master/blueocean/doc/BlueOcean.adoc</url>
   <properties>
     <jacoco.haltOnFailure>true</jacoco.haltOnFailure>
   </properties>
