--- a/blueocean-pipeline-scm-api/pom.xml
+++ b/blueocean-pipeline-scm-api/pom.xml
@@ -12,7 +12,7 @@
     <packaging>hpi</packaging>
 
     <name>Pipeline SCM API for Blue Ocean</name>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Blue+Ocean+Plugin</url>
+    <url>https://github.com/jenkinsci/blueocean-plugin/blob/master/blueocean/doc/BlueOcean.adoc</url>
 
     <dependencies>
         <dependency>
