--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>${revision}${changelist}</version>
+        <version>1.22.0</version>
     </parent>
 
     <artifactId>blueocean</artifactId>
@@ -19,7 +19,8 @@
         <connection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/blueocean-plugin</url>
-    </scm>
+      <tag>blueocean-parent-1.22.0</tag>
+  </scm>
 
     <properties>
         <jetty.contextPath>/jenkins</jetty.contextPath>
