--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -19,6 +19,7 @@
         <connection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/blueocean-plugin</url>
+        <tag>${scmTag}</tag>
     </scm>
 
     <properties>
