--- a/jenkins-design-language/pom.xml
+++ b/jenkins-design-language/pom.xml
@@ -13,7 +13,7 @@
 
     <name>Jenkins Design Language</name>
 
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Jenkins+Design+Language</url>
+    <url>https://github.com/jenkinsci/blueocean-plugin/blob/master/jenkins-design-language/README.md</url>
 
     <build>
         <resources>
