--- a/pom.xml
+++ b/pom.xml
@@ -433,7 +433,7 @@
              Need dependency on script-console to fix UpperBoundDeps errors caused due to different plugins depending
              on different versions of script-security plugin
         -->
-        <dependency>g st
+        <dependency>
 
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>script-security</artifactId>
