--- a/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
@@ -69,14 +69,19 @@
         <dependency>
             <groupId>io.jenkins.blueocean</groupId>
             <artifactId>blueocean-executor-info</artifactId>
-            <version>[1.14.0-SNAPSHOT,)</version>
+            <version>[1.23.0-SNAPSHOT,)</version>
         </dependency>
 
         <!-- following are required to run on newer jenkins versions (after 2.7) as it changed how classloading works a bit for plugins -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
-            <version>1.17</version>
+            <version>1.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>apache-httpcomponents-client-4-api</artifactId>
+            <version>4.5.5-3.0</version>
         </dependency>
     </dependencies>
     <profiles>
@@ -91,7 +96,7 @@
                 <dependency>
                     <groupId>io.jenkins.blueocean</groupId>
                     <artifactId>blueocean</artifactId>
-                    <version>[1.14.0-SNAPSHOT,)</version>
+                    <version>[1.23.0-SNAPSHOT,)</version>
                 </dependency>
             </dependencies>
         </profile>
