--- a/pom.xml
+++ b/pom.xml
@@ -553,7 +553,7 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>AbstractAnalytics
+            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jira</artifactId>
             <version>3.0.14</version>
             <exclusions>
