--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>3.43</version>
+    <relativePath />
   </parent>
 
   <groupId>io.jenkins.blueocean</groupId>
@@ -645,7 +646,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>github-api</artifactId>
-            <version>1.111-SNAPSHOT</version>
+            <version>1.111</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
