--- a/pom.xml
+++ b/pom.xml
@@ -875,7 +875,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-standalone</artifactId>
+            <artifactId>wiremock-jre8-standalone</artifactId>
             <version>2.26.3</version>
             <scope>test</scope>
         </dependency>
