[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>io.jenkins.blueocean</groupId>
   <artifactId>blueocean-parent</artifactId>
-  <version>1.23.0</version>
+  <version>${revision}${changelist}</version>
   <packaging>pom</packaging>
 
   <name>Blue Ocean Parent</name>
@@ -25,7 +25,7 @@
   </licenses>
 
   <properties>
-    <revision>1.23.0</revision>
+    <revision>1.23.1</revision>
     <changelist>-SNAPSHOT</changelist>
     <java.level>8</java.level>
     <jenkins.version>2.150.3</jenkins.version> <!-- Should be kept in sync with the version resulting from Dockerfile FROM statement-->
@@ -54,7 +54,7 @@
     <connection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</connection>
     <developerConnection>scm:git:https://github.com/jenkinsci/blueocean-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/blueocean-plugin</url>
-    <tag>blueocean-parent-1.23.0</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <url>https://github.com/jenkinsci/blueocean-plugin</url>
