--- a/blueocean-web/pom.xml
+++ b/blueocean-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>${revision}${changelist}</version>
+        <version>1.23.1</version>
     </parent>
 
     <artifactId>blueocean-web</artifactId>
