Implement Fake Run Details Plugin

--- a/acceptance-tests/runner/runtime-plugins/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/pom.xml
@@ -10,6 +10,7 @@
   <name>Blue Ocean ATH Parent</name>
 
   <modules>
+    <module>fake-run-details-plugin</module>
     <module>fake-security-realm-plugin</module>
     <module>runtime-deps</module>
   </modules>
