--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
         <dependency>
             <groupId>io.jenkins.tools.bom</groupId>
             <artifactId>bom-2.176.x</artifactId>
-            <version>9</version>
+            <version>11</version>
             <scope>import</scope>
             <type>pom</type>
         </dependency>
@@ -389,16 +389,6 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-cps</artifactId>
-            <version>2.76</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-api</artifactId>
-            <version>2.36</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
             <version>2.33</version>
         </dependency>
@@ -459,14 +449,6 @@
             <version>2.7</version>
         </dependency>
 
-        <!--
-             Need dependency on script-console to fix UpperBoundDeps errors caused due to different plugins depending
-             on different versions of script-security plugin
-        -->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>script-security</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-milestone-step</artifactId>
@@ -510,11 +492,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>apache-httpcomponents-client-4-api</artifactId>
-            <version>4.5.10-1.0</version>
-        </dependency>
 
         <!-- Other -->
         <dependency>
@@ -552,12 +529,6 @@
                     <artifactId>httpasyncclient</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <!-- Upper bound dependency fix as git plugin brings new version of it than others -->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>git-client</artifactId>
-            <version>2.7.0</version>
         </dependency>
 
         <!-- Other -->
@@ -624,11 +595,6 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-folder</artifactId>
             <version>6.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>matrix-project</artifactId>
-            <version>1.12</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
@@ -715,13 +681,8 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>mailer</artifactId>
-            <version>1.20</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>display-url-api</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.bitbucket.b_c</groupId>
@@ -781,11 +742,11 @@
         </dependency>
 
         <!-- Needed for blueocean-display-url plugin -->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>junit</artifactId>
-            <version>1.23</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
+<!--            <artifactId>junit</artifactId>-->
+<!--            <version>1.23</version>-->
+<!--        </dependency>-->
 
         <!-- used in blueocean-rest-impl test -->
         <dependency>
