[SECURITY-1961] add permission check for creating servers
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/blueocean-bitbucket-pipeline/pom.xml
+++ b/blueocean-bitbucket-pipeline/pom.xml
@@ -70,6 +70,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>matrix-auth</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- begin HttpRequest helper -->
     <dependency>
       <groupId>io.jenkins.blueocean</groupId>
