--- a/blueocean-i18n/pom.xml
+++ b/blueocean-i18n/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.jenkins.blueocean</groupId>
     <artifactId>blueocean-parent</artifactId>
-    <version>1.23.2</version>
+    <version>1.23.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>blueocean-i18n</artifactId>
