maven repo only https
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,8 +1,8 @@
 FROM ubuntu:16.04
 
-ENV MAVEN_VERSION 3.5.4
-ENV NODE_VERSION 10.13.0
-ENV PHANTOMJS_VERSION 2.1.1
+ENV MAVEN_VERSION=3.5.4
+ENV NODE_VERSION=10.13.0
+ENV PHANTOMJS_VERSION=2.1.1
 ARG UID=1000
 ARG GID=1000
 
@@ -38,7 +38,7 @@ ENV LC_ALL en_US.UTF-8
 #==========
 # Maven
 #==========
-RUN curl -fsSL http://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/$MAVEN_VERSION/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
+RUN curl -fsSL https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/$MAVEN_VERSION/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
   && mv /usr/share/apache-maven-$MAVEN_VERSION /usr/share/maven \
   && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
 ENV MAVEN_HOME /usr/share/maven
