add java11 profile to get ath working with java11
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -177,6 +177,19 @@
 
     <profiles>
         <profile>
+            <id>java11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                    <version>2.3.1</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>offline</id>
             <activation>
                 <property>
